--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-node_modules
+.idea
+.idea/*
+lib
+lib/*
+bin
+bin/*
+include
+include/*
+.Python
+garnet/__pycache__/
+garnet/endpoints/__pycache__/
+pip-selfcheck.json
+*.pyc
+.DS_Store
